Fix Firefox overflow issue

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -14,11 +14,16 @@
 
 body {
   max-width: 100vw;
+  height: 100vh;
   font-size: .975rem;
-  overflow: hidden;
+  display: grid;
+  grid-template-rows: auto 1fr;
+  /* Needed for Firefox */
+  overflow-block: clip;
+  overflow-inline: clip;
 }
 
-body:not(body i) {
+body {
   font-family: 'Montserrat', 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
